--- a/common/common.scss
+++ b/common/common.scss
@@ -966,6 +966,9 @@ body:before {
 	min-width: 100vw;
 	width: auto;
 	overflow: hidden;
+	top: 50%;
+	left: 50%;
+    	transform: translate3d(-50%, -50%, 0);
 }
 
 // fix IE EDGE backgrounds
