--- a/common/common.scss
+++ b/common/common.scss
@@ -54,7 +54,7 @@ $i: !important;
 
 $v-font-weight: 300 !default;
 $v-font-size: 1.25em !default;
-$v-saturation: 70 !default;
+$v-saturation: 85 !default;
 $v-theme-background: url(#{$vincent-background}) !default;
 
 // palette colors -------------------------------
@@ -1892,4 +1892,35 @@ html.mobile-view.mobile-device {
 	i {
 		font-size: 1.75em $i;
 	}
+}
+
+html {background: darken($theme-base, 25%)}
+
+#background {
+    opacity: .55;
+}
+
+body:before { opacity: .3;
+              background: linear-gradient(to bottom,
+									adjust-hue($theme-base, 33deg),
+									adjust-hue($theme-base, 30deg) 7.7%,
+									adjust-hue($theme-base, 27deg) 14.8%,
+									adjust-hue($theme-base, 24deg) 21%,
+									adjust-hue($theme-base, 21deg) 26.5%,
+									adjust-hue($theme-base, 18deg) 31.4%,
+									adjust-hue($theme-base, 15deg) 35.9%,
+									adjust-hue($theme-base, 12deg) 40.1%,
+									adjust-hue($theme-base, 9deg) 44.2%,
+									adjust-hue($theme-base, 6deg) 48.1%,
+									adjust-hue($theme-base, 3deg) 52%, 
+									adjust-hue($theme-base, 0deg) 56%,
+									adjust-hue($theme-base, -3deg) 60.1%,
+									adjust-hue($theme-base, -6deg) 64.3%,
+									adjust-hue($theme-base, -9deg) 68.8%,
+									adjust-hue($theme-base, -12deg) 73.7%,
+									adjust-hue($theme-base, -15deg) 79.2%,
+									adjust-hue($theme-base, -18deg) 85.4%,
+									adjust-hue($theme-base, -21deg) 92.5%,
+									adjust-hue($theme-base, -24deg)
+									)
 }
