--- a/common/common.scss
+++ b/common/common.scss
@@ -75,21 +75,34 @@ $link-color: lighten($theme-base, 20%) !default;
 
 // settings -------------------------------
 
-$body-background-pattern-opacity: 0.35 !default;
-$body-background-gradient-opacity: 0.25 !default;
+$body-background-pattern-opacity: 0.55 !default;
+$body-background-gradient-opacity: 0.35 !default;
 $highlight-speed: 1.5s !default;
 $button-text-case: uppercase !default;
 
 body:before {
-	background: radial-gradient(
-		at 100% 100%,
-		adjust-hue($theme-base, -15deg),
-		adjust-hue($theme-base, -10deg),
-		adjust-hue($theme-base, -5deg),
-		$theme-base,
-		adjust-hue($theme-base, 5deg),
-		adjust-hue($theme-base, 10deg),
-		adjust-hue($theme-base, 15deg)
+	background: linear-gradient(
+		to bottom,
+		adjust-hue($theme-base, 33deg),
+		adjust-hue($theme-base, 30deg) 7.7%,
+		adjust-hue($theme-base, 27deg) 14.8%,
+		adjust-hue($theme-base, 24deg) 21%,
+		adjust-hue($theme-base, 21deg) 26.5%,
+		adjust-hue($theme-base, 18deg) 31.4%,
+		adjust-hue($theme-base, 15deg) 35.9%,
+		adjust-hue($theme-base, 12deg) 40.1%,
+		adjust-hue($theme-base, 9deg) 44.2%,
+		adjust-hue($theme-base, 6deg) 48.1%,
+		adjust-hue($theme-base, 3deg) 52%,
+		adjust-hue($theme-base, 0deg) 56%,
+		adjust-hue($theme-base, -3deg) 60.1%,
+		adjust-hue($theme-base, -6deg) 64.3%,
+		adjust-hue($theme-base, -9deg) 68.8%,
+		adjust-hue($theme-base, -12deg) 73.7%,
+		adjust-hue($theme-base, -15deg) 79.2%,
+		adjust-hue($theme-base, -18deg) 85.4%,
+		adjust-hue($theme-base, -21deg) 92.5%,
+		adjust-hue($theme-base, -24deg)
 	);
 }
 
@@ -97,7 +110,7 @@ body:before {
 
 html {
 	font-family: "Roboto", sans-serif;
-	background: darken($theme-base, 20%);
+	background: darken($theme-base, 25%);
 }
 
 body,
@@ -968,7 +981,7 @@ body:before {
 	overflow: hidden;
 	top: 50%;
 	left: 50%;
-    	transform: translate3d(-50%, -50%, 0);
+	transform: translate3d(-50%, -50%, 0);
 }
 
 // fix IE EDGE backgrounds
@@ -1892,35 +1905,4 @@ html.mobile-view.mobile-device {
 	i {
 		font-size: 1.75em $i;
 	}
-}
-
-html {background: darken($theme-base, 25%)}
-
-#background {
-    opacity: .55;
-}
-
-body:before { opacity: .3;
-              background: linear-gradient(to bottom,
-									adjust-hue($theme-base, 33deg),
-									adjust-hue($theme-base, 30deg) 7.7%,
-									adjust-hue($theme-base, 27deg) 14.8%,
-									adjust-hue($theme-base, 24deg) 21%,
-									adjust-hue($theme-base, 21deg) 26.5%,
-									adjust-hue($theme-base, 18deg) 31.4%,
-									adjust-hue($theme-base, 15deg) 35.9%,
-									adjust-hue($theme-base, 12deg) 40.1%,
-									adjust-hue($theme-base, 9deg) 44.2%,
-									adjust-hue($theme-base, 6deg) 48.1%,
-									adjust-hue($theme-base, 3deg) 52%, 
-									adjust-hue($theme-base, 0deg) 56%,
-									adjust-hue($theme-base, -3deg) 60.1%,
-									adjust-hue($theme-base, -6deg) 64.3%,
-									adjust-hue($theme-base, -9deg) 68.8%,
-									adjust-hue($theme-base, -12deg) 73.7%,
-									adjust-hue($theme-base, -15deg) 79.2%,
-									adjust-hue($theme-base, -18deg) 85.4%,
-									adjust-hue($theme-base, -21deg) 92.5%,
-									adjust-hue($theme-base, -24deg)
-									)
 }
