--- a/common/common.scss
+++ b/common/common.scss
@@ -71,7 +71,7 @@ $trim-background: rgba($text-base, 0.1) !default;
 $border-color: desaturate($trim-background, 100%) !default;
 $highlight-color: $trim-background !default;
 $theme-trim: $quaternary !default;
-$link-color: lighten($theme-base, 15%) !default;
+$link-color: lighten($theme-base, 10%) !default;
 
 // settings -------------------------------
 
@@ -81,15 +81,28 @@ $highlight-speed: 1.5s !default;
 $button-text-case: uppercase !default;
 
 body:before {
-	background: radial-gradient(
-		at 100% 100%,
-		adjust-hue($theme-base, -15deg),
-		adjust-hue($theme-base, -10deg),
-		adjust-hue($theme-base, -5deg),
-		$theme-base,
-		adjust-hue($theme-base, 5deg),
-		adjust-hue($theme-base, 10deg),
-		adjust-hue($theme-base, 15deg)
+	background: linear-gradient(
+		to bottom right,
+		adjust-hue($theme-base, 33deg),
+		adjust-hue($theme-base, 30deg) 7.7%,
+		adjust-hue($theme-base, 27deg) 14.8%,
+		adjust-hue($theme-base, 24deg) 21%,
+		adjust-hue($theme-base, 21deg) 26.5%,
+		adjust-hue($theme-base, 18deg) 31.4%,
+		adjust-hue($theme-base, 15deg) 35.9%,
+		adjust-hue($theme-base, 12deg) 40.1%,
+		adjust-hue($theme-base, 9deg) 44.2%,
+		adjust-hue($theme-base, 6deg) 48.1%,
+		adjust-hue($theme-base, 3deg) 52%,
+		adjust-hue($theme-base, 0deg) 56%,
+		adjust-hue($theme-base, -3deg) 60.1%,
+		adjust-hue($theme-base, -6deg) 64.3%,
+		adjust-hue($theme-base, -9deg) 68.8%,
+		adjust-hue($theme-base, -12deg) 73.7%,
+		adjust-hue($theme-base, -15deg) 79.2%,
+		adjust-hue($theme-base, -18deg) 85.4%,
+		adjust-hue($theme-base, -21deg) 92.5%,
+		adjust-hue($theme-base, -24deg)
 	);
 }
 
