--- a/common/common.scss
+++ b/common/common.scss
@@ -2075,3 +2075,7 @@ $q-background: rgba(contrast($text-base), 0.5) !default;
 .topic-avatar {
 	position: absolute;
 }
+
+.timeline-container {
+    z-index: 1;
+}
